@@ -29,12 +29,18 @@ src/core/tcp_out.c
 src/core/timers.c
 src/core/udp.c
 src/core/inet_chksum.c
+src/netif/etharp.c
+src/netif/ethernetif.c
+src/netif/slipif.c
 src/core/ipv4/autoip.c
 src/core/ipv4/icmp.c
 src/core/ipv4/igmp.c
 src/core/ipv4/ip4.c
 src/core/ipv4/ip4_addr.c
 src/core/ipv4/ip_frag.c
+""")
+
+ipv6_src = Split("""
 src/core/ipv6/dhcp6.c
 src/core/ipv6/ethip6.c
 src/core/ipv6/icmp6.c
@@ -44,9 +50,6 @@ src/core/ipv6/ip6.c
 src/core/ipv6/ip6_frag.c
 src/core/ipv6/mld6.c
 src/core/ipv6/nd6.c
-src/netif/etharp.c
-src/netif/ethernetif.c
-src/netif/slipif.c
 """)
 
 snmp_src = Split("""
@@ -91,9 +94,12 @@ src/netif/ppp/polarssl/sha1.c
 path = [GetCurrentDir() + '/src',
     GetCurrentDir() + '/src/include',
     GetCurrentDir() + '/src/include/ipv4',
-	GetCurrentDir() + '/src/include/ipv6',
+    GetCurrentDir() + '/src/include/ipv6',
     GetCurrentDir() + '/src/arch/include',
     GetCurrentDir() + '/src/include/netif']
+
+if GetDepend(['RT_LWIP_IPV6']):
+    src += ipv6_src
 
 if GetDepend(['RT_LWIP_SNMP']):
     src += snmp_src
